--- a/consult/less/styles.less
+++ b/consult/less/styles.less
@@ -11,3 +11,4 @@
 @import url('page_participiant_profile.less');
 @import url('page_consultant_list.less');
 @import url('page_question_list.less');
+@import url('page_reviews.less');
