--- a/consult/less/mainpage.less
+++ b/consult/less/mainpage.less
@@ -132,4 +132,409 @@ body.page-mainpage{
             }
         }
     }
+    & > .content{
+        section{
+            margin-bottom: 20px;
+        }
+        section.statistic{
+            margin-top: 20px;
+            overflow: hidden;
+            padding:0;
+            .item{
+                float: left;
+                padding:30px 35px;
+                border-left:solid 1px #b9d4cc;
+                &:first-child{
+                    border: none;
+                }
+                &.last{
+                    float: none;
+                    overflow: hidden;
+                }
+                i{
+                    font-size:4.0rem;
+                    color:@sky;
+                    float: left;
+                    margin-right: 10px;
+                }
+                .text{
+                    overflow: hidden;
+                    p{
+                        margin:2px 0;
+                        &.count{
+                            color: @sea;
+                            font-size: 1.6rem;
+                            font-weight: 500;
+                            margin-top: 0;
+                        }
+                        &.object{
+                            color: @sea_light;
+                            font-size: 1.4rem;
+                            font-weight: 500;
+                            text-transform: uppercase;
+                        }
+                    }
+                }
+            }
+        }
+        section.search-consultant.content-block{
+            margin-top: 20px;
+            background: url('../images/search-user-bg.png') center center;
+            background-size:cover;
+            h3{
+                text-align: center;
+                margin:0;
+                padding:0;
+                color:@white;
+                font-size:1.8rem;
+            }
+            form{
+                width: 90%;
+                margin:30px auto 10px auto;
+                .field{
+                    width: 35%;
+                    float: left;
+                    margin-right: 2%;
+                    .select2-container{
+                        width: 100% !important;
+                        .select2-selection__arrow{
+                            background:  url('../images/interface/dropdown-arrow.png') center center no-repeat #41b6ad !important;
+                        }
+                        .select2-selection{
+                            border-color: #41b6ad;
+                        }
+                    }
+                }
+                .submit{
+                    width: 25%;
+                    float: left;
+                    input[type="submit"]{
+                        width: 100%;
+                        padding: 10px 17px 8px 17px;
+                        border-radius:6px;
+                        -moz-border-radius:6px;
+                        -o-border-radius:6px;
+                        -webkit-border-radius:6px;
+                    }
+                }
+            }
+        }
+        section.urgent-consult{
+            background: @red_light;
+            color:@white;
+            height: 100px;
+            padding: 0;
+            overflow: hidden;
+            i{
+                display: block;
+                float: left;
+                width: 100px;
+                height: 100px;
+                font-size:3.6rem;
+                line-height:100px;
+                text-align: center;
+                background: #eb5245;
+            }
+            h2{
+                display: block;
+                float: left;
+                color:@white;
+                font-size: 2.4rem;
+                font-weight: 500;
+                margin:22px 20px;
+            }
+            a{
+                display: block;
+                float: right;
+                border-color:@white;
+                color:@white;
+                margin:32px 30px;
+                &:hover, &.active{
+                    background: @red - #111;
+                }
+            }
+        }
+        section.catalog-articles{
+            overflow: hidden;
+            .categories{
+                float: left;
+                width: 23%;
+                .menu{
+                    li{
+                        font-size: 1.4rem;
+                        font-weight: 500;
+                        margin:7px 0;
+                        a{
+                            color: @sky;
+                            text-decoration: none;
+                            &:hover{
+                                color:@sea;
+                            }
+                        }
+                    }
+                }
+                a.btn{
+                    width: 100%;
+                    box-sizing:border-box;
+                    -moz-box-sizing:border-box;
+                    margin-top: 10px;
+                    text-align: center;
+                }
+            }
+            .last-articles{
+                overflow: hidden;
+                h4{
+                    margin-left: 3%;
+                }
+                .article{
+                    float: left;
+                    overflow: hidden;
+                    padding: 0;
+                    margin-left: 3%;
+                    width: 30.3%;
+                    .teaser-container{
+                        img{
+                            display: block;
+                            width: 100%;
+                        }
+                    }
+                    .content{
+                        padding: 20px;
+                        h4{
+                            padding: 0;
+                            margin: 0;
+                            color: @sea;
+                            font-size: 1.4rem;
+                            font-weight: 500;
+                        }
+                        p.category{
+                            color: @sea;
+                            font-size:1.1rem;
+                            font-weight: 500;
+                            span{
+                                color:@sea_light;
+                            }
+                        }
+                        p.author{
+                            color: @sky;
+                            font-size: 1.2rem;
+                            font-weight: 400;
+                        }
+                        p.introtext{
+                            color: @sea_light;
+                            font-size: 11px;
+                            line-height:155%;
+                        }
+                        p.date{
+                            color:@sea_light;
+                            font-size:1.1rem;
+                        }
+                    }
+                    a.btn{
+                        display: block;
+                        box-sizing:border-box;
+                        -moz-box-sizing:border-box;
+                        margin:0 auto 20px auto;
+                        width: 80%;
+                        text-align: center;
+                        font-size:1.2rem;
+                    }
+                }
+            }
+        }
+        section.ask-question{
+            overflow: hidden;
+            a.btn{
+                display: block;
+                float: right;
+            }
+            h2{
+                display: block;
+                overflow: hidden;
+                font-size: 2.4rem;
+                font-weight: 500;
+                padding: 0;
+            }
+        }
+        section.questions{
+            overflow: hidden;
+            .question{
+                float: left;
+                margin-right: 2%;
+                width: 49%;
+                margin-bottom: 20px;
+                &:nth-child(2n){
+                    margin-right: 0;
+                }
+                &:nth-child(2n+1){
+                    clear: left;
+                }
+                .author{
+                    overflow: hidden;
+                    .photo-container{
+                        float: left;
+                        width: 50px;
+                        height: 50px;
+                        border-radius:50px;
+                        -o-border-radius:50px;
+                        -moz-border-radius:50px;
+                        -webkit-border-radius:50px;
+                        overflow: hidden;
+                        border:solid 1px @sea_light;
+                        margin-right: 20px;
+                    }
+                    .container{
+                        overflow: hidden;
+                        p{
+                            margin:2px 0;
+                            &.name{
+                                color: @sky;
+                                font-size: 1.2rem;
+                                font-weight: 700;
+                            }
+                            &.job{
+                                color: @sea_light;
+                                font-size: 1.2rem;
+                                font-weight: 700;
+                            }
+                            &.category{
+                                font-size:1.0rem;
+                                color:@sea_light;
+                                margin-top: 10px;
+                                font-weight: 700;
+                                span{
+                                    color:@sea;
+                                }
+                            }
+                        }
+                    }
+                }
+                h4{
+                    color: @sea;
+                    font-size: 1.4rem;
+                    font-weight: 500;
+                    span{
+                        color:@sky;
+                    }
+                }
+                .answer-content, .question-content{
+                    min-height:100px;
+                    max-height:300px;
+                    overflow: hidden;
+                    .fader{
+                        position: absolute;
+                        bottom:0;
+                        width: 100%;
+                        height: 30px;
+                        z-index: 1;
+                        background: -moz-linear-gradient(top,  rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%); /* FF3.6+ */
+                        background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,0)), color-stop(100%,rgba(255,255,255,1))); /* Chrome,Safari4+ */
+                        background: -webkit-linear-gradient(top,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 100%); /* Chrome10+,Safari5.1+ */
+                        background: -o-linear-gradient(top,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 100%); /* Opera 11.10+ */
+                        background: -ms-linear-gradient(top,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 100%); /* IE10+ */
+                        background: linear-gradient(to bottom,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 100%); /* W3C */
+                        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#ffffff',GradientType=0 ); /* IE6-9 */
+
+                    }
+                } 
+                a#read-more{
+                    color:@sky;
+                    font-size:1.2rem;
+                    text-decoration: none;
+                    &:hover{
+                        text-decoration: underline;
+                    }
+                }
+            }
+        }
+        .professional-consults{
+            h4{
+                color:  @sea;
+                font-size: 2.4rem;
+                font-weight: 500;
+                text-align: center;
+                margin-top: 50px;
+                margin-bottom: 20px;
+            }
+            .slider{
+                padding-bottom: 20px;
+                .wrapper{
+                    max-width:none;
+                    .item{
+                        float: left;
+                        width: 220px;
+                        margin-left: 20px;
+                        margin-bottom: 20px;
+                        &.first-of-row{
+                            margin-left: 0;
+                        }
+                        .photo-container{
+                            width: 100%;
+                            overflow: hidden;
+                            border-radius:500px;
+                            -o-border-radius:500px;
+                            -moz-border-radius:500px;
+                            -webkit-border-radius:500px;
+                            a{
+                                display: block;
+                                text-decoration: none;
+                                img{
+                                    display: block;
+                                    width: 100%;
+                                }
+                            }
+                        }
+                        a.username{
+                            display: block;
+                            margin-top: 20px;
+                            text-align: center;
+                            color:  @sky;
+                            font-size: 1.4rem; /* Приближение из-за подстановки шрифтов */
+                            font-weight: 400;
+                            span.lastname{
+                                font-weight: 700;
+                            }
+                            &:hover{
+                                color:@sky - #111;
+                            }
+                        }
+                        .rating-block{
+                            width: 70px;
+                            margin:20px auto 0 auto;
+                        }
+                    }
+                }   
+                .controls-container{
+                    left: 50%;
+                    float: left;
+                    .controls{
+                        right: 50%;
+                        margin-top: 10px;
+                        float: right;
+                        .circle{
+                            border-radius:15px;
+                            -o-border-radius:15px;
+                            -moz-border-radius:15px;
+                            -webkit-border-radius:15px;
+                            width: 8px;
+                            height: 8px;
+                            float: left;
+                            margin-right: 6px;
+                            background: @sea_light;
+                            cursor: pointer;
+                            &.active{
+                                background: @sky;
+                            }
+                        }
+                    }
+                }
+            }
+            #show-all-users{
+                width: 230px;
+                display: block;
+                margin:auto;
+                text-align: center;
+            }
+        }
+    }
 }
