--- a/cards/less/interface.less
+++ b/cards/less/interface.less
@@ -6,8 +6,8 @@
 @black: #000; //Черный
 @pink: #ec4863; //Розовый
 @pink_dark: #a73e5c; //Розовый темный
-@bordo: #290019; //Бордовый
-@bordo_light: #b099a3; //Бордовый бледный
+@bordo: #082e41; //Бордовый
+@bordo_light: #99a9b0; //Бордовый бледный
 @pink_light: #f4efff; //Розовый Светлый
 @green_light: #33b679; //Зеленый Светлый
 @green: #0f9b58; //Зеленый
@@ -74,7 +74,7 @@ body {
     font-family: "Roboto", sans-serif;
     font-size: 1.4rem;
     color: @bordo_light;
-    background: @pink_light;
+    background: #eeeeee;
 }
 p {
     margin-top: 10px;
