--- a/cards/less/page_profile.less
+++ b/cards/less/page_profile.less
@@ -5,7 +5,7 @@
 body.page-profile{
     .resume-section {
         overflow: hidden;
-        min-height:800px;
+        min-height:600px;
         .profile {
             float: left;
             width: 57%;
@@ -122,6 +122,9 @@ body.page-profile{
             float: right;
             width: 41%;
             overflow: hidden;
+            .infor-info{
+                margin-top:7px;
+            }
             .price {
                 margin-top: 7px;
                 h4 {
@@ -166,7 +169,7 @@ body.page-profile{
                         }
                     }
                     &.paid{
-                        margin-top: 20px;
+                        //margin-top: 20px;
                         .visibility{
                             overflow: hidden;
                             i{
