--- a/cards/less/page_profile_settings.less
+++ b/cards/less/page_profile_settings.less
@@ -178,18 +178,20 @@ body.page-profile-settings{
             }
         }
         a.add-document-button{
-            margin-top: 15px;
-            text-align: center;
-            font-size:1.2rem;
-            font-weight: 500;
-            background: #e9f7f1;
+            background-color: #f4efff;
+            border: medium none;
+            border-radius: 5px;
+            color: #b099a3;
+            cursor: pointer;
             display: block;
-            padding:5px 0;
-            color:@bordo_light;
+            padding: 6px 0;
+            width: 100%;
+            margin-right: 20px;
+            margin-top: 10px;
             text-decoration: none;
-            margin-bottom: 30px;
+            text-align: center;
             &:hover{
-                background: #e9f7f1 - #111;
+                background: #d2cddd;
                 color:@bordo;
             }
         }
@@ -273,21 +275,21 @@ body.page-profile-settings{
                     width: 45%;
                     margin-right: 5%;
                 }
-                input[type="submit"]{
-                    width: 100%;
-                    border-radius: 5px;
-                    background-color: @pink_light;
-                    width: 100%;
-                    border:none;
-                    cursor:pointer;
-                    color:@bordo_light;
-                    display: block;
-                    padding:6px 0;
-                    &:hover{
-                        background-color: @pink_light - #222;
-                        color:@bordo;
-                    }
-                }
+                // input[type="submit"]{
+                //     width: 100%;
+                //     border-radius: 5px;
+                //     background-color: @pink_light;
+                //     width: 100%;
+                //     border:none;
+                //     cursor:pointer;
+                //     color:@bordo_light;
+                //     display: block;
+                //     padding:6px 0;
+                //     &:hover{
+                //         background-color: @pink_light - #222;
+                //         color:@bordo;
+                //     }
+                // }
             }
         }
         section.professional{
