--- a/cards/less/mainpage.less
+++ b/cards/less/mainpage.less
@@ -218,7 +218,7 @@ body.page-mainpage{
         }
     }
     footer.footer{
-        color:@white;
+        color:@bordo;
         font-size:1.4rem;
         font-weight:500;
         margin-top: 50px;
@@ -380,8 +380,8 @@ body.page-mainpage{
     }
 }
 body.page-password-recovery, body.page-sign-up{
-    background: url('../images/mainpage-bg.jpg') center center no-repeat;
-    background-size:cover;
+    //background: url('../images/mainpage-bg.jpg') center center no-repeat;
+    //background-size:cover;
     .ui-button-icon-primary{
         margin-left: -16px !important;
         margin-top: 0 !important;
