--- a/cards/less/global.less
+++ b/cards/less/global.less
@@ -267,6 +267,9 @@ header.header {
         .support{
             display: block;
             float: right;
+            a{
+                color:@pink;
+            }
         }
         .footer-logo{
             margin:20px 0;
