--- a/cards/css/styles.css
+++ b/cards/css/styles.css
@@ -825,57 +825,61 @@ header.header .mainmenu li a:hover {
   display: block;
   float: right;
 }
-/* line 271, global.less */
+/* line 270, global.less */
+.footer .top .support a {
+  color: #ec4863;
+}
+/* line 274, global.less */
 .footer .top .footer-logo {
   margin: 20px 0;
 }
-/* line 273, global.less */
+/* line 276, global.less */
 .footer .top .footer-logo .logo {
   float: left;
   margin-right: 15px;
 }
-/* line 277, global.less */
+/* line 280, global.less */
 .footer .top .footer-logo .title {
   display: block;
   float: left;
   font-size: 1.4rem;
   margin-top: 5px;
 }
-/* line 282, global.less */
+/* line 285, global.less */
 .footer .top .footer-logo .title span {
   font-size: 1.2rem;
   font-weight: normal;
 }
-/* line 289, global.less */
+/* line 292, global.less */
 .footer .bottom {
   padding: 8px 30px;
   background: #f5f5f5;
   overflow: hidden;
 }
-/* line 293, global.less */
+/* line 296, global.less */
 .footer .bottom p {
   display: block;
   float: left;
 }
-/* line 297, global.less */
+/* line 300, global.less */
 .footer .bottom ul {
   float: right;
   margin-top: 10px;
 }
-/* line 300, global.less */
+/* line 303, global.less */
 .footer .bottom ul li {
   float: left;
   margin-left: 20px;
 }
-/* line 304, global.less */
+/* line 307, global.less */
 .footer .bottom ul li a:hover {
   text-decoration: underline;
 }
-/* line 320, global.less */
+/* line 323, global.less */
 .error {
   color: #ec4863;
 }
-/* line 324, global.less */
+/* line 327, global.less */
 #success {
   box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -883,7 +887,7 @@ header.header .mainmenu li a:hover {
   padding: 15px 30px;
   display: none;
 }
-/* line 333, global.less */
+/* line 336, global.less */
 #success_forgot {
   box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -891,7 +895,7 @@ header.header .mainmenu li a:hover {
   padding: 15px 30px;
   display: none;
 }
-/* line 342, global.less */
+/* line 345, global.less */
 .preloader_popup {
   background: url("../images/preloader.gif") 50% 50% no-repeat #ffffff !important;
   opacity: 0.3;
@@ -900,7 +904,7 @@ header.header .mainmenu li a:hover {
   left: 0px;
   z-index: 10000;
 }
-/* line 350, global.less */
+/* line 353, global.less */
 .preloader_popup_a {
   background: url("../images/preloader.gif") 50% 50% no-repeat #ffffff !important;
   opacity: 0.3;
@@ -911,7 +915,7 @@ header.header .mainmenu li a:hover {
   height: 190px !important;
   width: 535px;
 }
-/* line 361, global.less */
+/* line 364, global.less */
 .preloader_popup_s {
   background: url("../images/preloader.gif") 50% 50% no-repeat #ffffff !important;
   opacity: 0.3;
@@ -922,7 +926,7 @@ header.header .mainmenu li a:hover {
   height: 245px !important;
   width: 238px;
 }
-/* line 371, global.less */
+/* line 374, global.less */
 .preloader_popup_l {
   background: url("../images/preloader.gif") 50% 50% no-repeat #ffffff !important;
   opacity: 0.3;
@@ -933,7 +937,7 @@ header.header .mainmenu li a:hover {
   height: 440px !important;
   width: 380px;
 }
-/* line 381, global.less */
+/* line 384, global.less */
 .preloader_popup_r {
   background: url("../images/preloader.gif") 50% 50% no-repeat #ffffff !important;
   opacity: 0.3;
@@ -944,7 +948,7 @@ header.header .mainmenu li a:hover {
   height: 453px !important;
   width: 380px;
 }
-/* line 391, global.less */
+/* line 394, global.less */
 .preloader_popup_f {
   background: url("../images/preloader.gif") 50% 50% no-repeat #ffffff !important;
   opacity: 0.3;
@@ -955,7 +959,7 @@ header.header .mainmenu li a:hover {
   height: 265px !important;
   width: 380px;
 }
-/* line 401, global.less */
+/* line 404, global.less */
 .preloader_popup_spec {
   background: url("../images/preloader.gif") 50% 50% no-repeat #ffffff !important;
   opacity: 0.3;
@@ -966,15 +970,15 @@ header.header .mainmenu li a:hover {
   height: 295px !important;
   width: 400px;
 }
-/* line 411, global.less */
+/* line 414, global.less */
 #registration-window {
   display: none;
 }
-/* line 414, global.less */
+/* line 417, global.less */
 #forgot-password-window {
   display: none;
 }
-/* line 417, global.less */
+/* line 420, global.less */
 .hidden {
   display: none;
 }
