--- a/consult/less/styles.less
+++ b/consult/less/styles.less
@@ -11,4 +11,5 @@
 @import url('page_participiant_profile.less');
 @import url('page_consultant_list.less');
 @import url('page_question_list.less');
+@import url('page_public_question_list.less');
 @import url('page_reviews.less');
