--- a/cards/less/global.less
+++ b/cards/less/global.less
@@ -210,6 +210,27 @@ header.header {
             }
         }
     }
+    .time{
+        float: right;
+        margin:0 30px;
+        overflow: hidden;
+        padding:3px;
+        p{
+            display: block;
+            float: left;
+            margin-right: 20px;
+            font-size:1.2rem;
+            font-weight:500;
+            color:#aeaeae;
+            text-transform: uppercase;
+            background: #f5f5f5;
+            border-radius:30px;
+            -o-border-radius:30px;
+            -moz-border-radius:30px;
+            -webkit-border-radius:30px;
+            padding:4px 20px;
+        }
+    }
 }
 .user-menu-section {
     background: #f8f8f8;
