--- a/consult/less/interface.less
+++ b/consult/less/interface.less
@@ -163,6 +163,16 @@ p {
             background: @red;
         }
     }
+    &.disabled{
+        cursor:default;
+        border-color:#b9d4cc;
+        color:#b9d4cc;
+        &:hover{
+            border-color:#b9d4cc;
+            color:#b9d4cc;
+            background: @white;
+        }
+    }
 }
 
 /*ЧЕКБОКСЫ*/
