--- a/consult/less/styles.less
+++ b/consult/less/styles.less
@@ -13,3 +13,4 @@
 @import url('page_question_list.less');
 @import url('page_public_question_list.less');
 @import url('page_reviews.less');
+@import url('page_consultation.less');
