Вёрстка библиотеки (главная страница)

--- a/consult/css/styles.css
+++ b/consult/css/styles.css
@@ -4754,4 +4754,270 @@ body.page-consultation section.reviews .content-block #load-more-reviews {
 body.page-consultation section.reviews .write-review textarea {
   height: 98px;
 }
+/* line 1, modal_sign_up_consultation.less */
+.window.sign-up-consultation {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.4);
+  z-index: 10;
+}
+/* line 9, modal_sign_up_consultation.less */
+.window.sign-up-consultation > .container {
+  position: relative;
+  width: 480px;
+  height: auto;
+  margin: 100px auto;
+  background: #ffffff;
+  border-radius: 5px;
+  -o-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  padding: 30px;
+}
+/* line 20, modal_sign_up_consultation.less */
+.window.sign-up-consultation > .container i.fa-close {
+  position: absolute;
+  right: 30px;
+  top: 30px;
+  cursor: pointer;
+  font-size: 1.8rem;
+}
+/* line 26, modal_sign_up_consultation.less */
+.window.sign-up-consultation > .container i.fa-close:hover {
+  color: #35504e;
+}
+/* line 30, modal_sign_up_consultation.less */
+.window.sign-up-consultation > .container h1 {
+  font-size: 2.4rem;
+  font-weight: 500;
+  padding-top: 0;
+  margin-top: -7px;
+}
+/* line 36, modal_sign_up_consultation.less */
+.window.sign-up-consultation > .container .profile {
+  overflow: hidden;
+}
+/* line 38, modal_sign_up_consultation.less */
+.window.sign-up-consultation > .container .profile .photo-container {
+  float: left;
+  margin-right: 20px;
+  width: 120px;
+  height: 120px;
+  border-radius: 120px;
+  -o-border-radius: 120px;
+  -webkit-border-radius: 120px;
+  -moz-border-radius: 120px;
+  overflow: hidden;
+}
+/* line 48, modal_sign_up_consultation.less */
+.window.sign-up-consultation > .container .profile .photo-container img {
+  width: 100%;
+  display: block;
+}
+/* line 53, modal_sign_up_consultation.less */
+.window.sign-up-consultation > .container .profile .about {
+  overflow: hidden;
+}
+/* line 55, modal_sign_up_consultation.less */
+.window.sign-up-consultation > .container .profile .about .rating-block {
+  float: right;
+  width: 50px;
+}
+/* line 59, modal_sign_up_consultation.less */
+.window.sign-up-consultation > .container .profile .about p.name {
+  display: block;
+  overflow: hidden;
+  color: #35504e;
+}
+/* line 63, modal_sign_up_consultation.less */
+.window.sign-up-consultation > .container .profile .about p.name .lastname {
+  font-size: 1.8rem;
+  text-transform: uppercase;
+  font-weight: 700;
+}
+/* line 68, modal_sign_up_consultation.less */
+.window.sign-up-consultation > .container .profile .about p.name .firstname {
+  font-size: 1.6rem;
+  font-weight: 700;
+}
+/* line 73, modal_sign_up_consultation.less */
+.window.sign-up-consultation > .container .profile .about p.job {
+  font-size: 1.4rem;
+  font-weight: 500;
+  color: #4ad0c5;
+}
+/* line 77, modal_sign_up_consultation.less */
+.window.sign-up-consultation > .container .profile .about p.job span.age {
+  margin-left: 20px;
+  color: #8aa4a2;
+}
+/* line 84, modal_sign_up_consultation.less */
+.window.sign-up-consultation > .container form {
+  overflow: hidden;
+}
+/* line 86, modal_sign_up_consultation.less */
+.window.sign-up-consultation > .container form .calendar {
+  margin: 0;
+}
+/* line 89, modal_sign_up_consultation.less */
+.window.sign-up-consultation > .container form .calendar header a {
+  color: #35504e;
+}
+/* line 4, page_library.less */
+body.page-library .wrapper section.search-article {
+  background: #4ad0c5;
+  margin-top: 20px;
+}
+/* line 7, page_library.less */
+body.page-library .wrapper section.search-article form {
+  overflow: hidden;
+  width: 85%;
+  margin: auto;
+}
+/* line 11, page_library.less */
+body.page-library .wrapper section.search-article form .left {
+  width: 80%;
+  float: left;
+  margin-right: 20px;
+}
+/* line 16, page_library.less */
+body.page-library .wrapper section.search-article form .left .field .select2-container {
+  width: 100% !important;
+  margin-top: 10px;
+}
+/* line 19, page_library.less */
+body.page-library .wrapper section.search-article form .left .field .select2-container .select2-selection__arrow {
+  background: url('../images/interface/dropdown-arrow.png') center center no-repeat #41b6ad;
+}
+/* line 22, page_library.less */
+body.page-library .wrapper section.search-article form .left .field .select2-container .select2-selection {
+  border-color: #41b6ad;
+}
+/* line 26, page_library.less */
+body.page-library .wrapper section.search-article form .left .field.category {
+  float: left;
+  width: 48%;
+  margin-right: 4%;
+}
+/* line 31, page_library.less */
+body.page-library .wrapper section.search-article form .left .field.author {
+  overflow: hidden;
+}
+/* line 37, page_library.less */
+body.page-library .wrapper section.search-article form .right {
+  overflow: hidden;
+}
+/* line 39, page_library.less */
+body.page-library .wrapper section.search-article form .right input[type="submit"] {
+  width: 100%;
+  padding: 9px 17px 8px 17px;
+}
+/* line 46, page_library.less */
+body.page-library .wrapper section.write-article {
+  overflow: hidden;
+}
+/* line 48, page_library.less */
+body.page-library .wrapper section.write-article .align-container {
+  float: right;
+  right: 50%;
+}
+/* line 51, page_library.less */
+body.page-library .wrapper section.write-article .align-container .align-wrapper {
+  float: left;
+  left: 50%;
+}
+/* line 54, page_library.less */
+body.page-library .wrapper section.write-article .align-container .align-wrapper a.btn {
+  display: block;
+  float: right;
+  margin-left: 40px;
+  margin-top: 10px;
+}
+/* line 61, page_library.less */
+body.page-library .wrapper section.write-article .align-container .align-wrapper h1 {
+  display: block;
+  float: left;
+  overflow: hidden;
+  font-size: 2.4rem;
+  font-weight: 500;
+}
+/* line 71, page_library.less */
+body.page-library .wrapper section.articles-flow {
+  overflow: hidden;
+}
+/* line 74, page_library.less */
+body.page-library .wrapper section.articles-flow .article {
+  float: left;
+  width: 23%;
+  margin-right: 2.66%;
+  padding: 0;
+  overflow: hidden;
+  margin-bottom: 20px;
+}
+/* line 81, page_library.less */
+body.page-library .wrapper section.articles-flow .article:nth-child(4n) {
+  margin-right: 0;
+}
+/* line 84, page_library.less */
+body.page-library .wrapper section.articles-flow .article .image {
+  width: 100%;
+}
+/* line 86, page_library.less */
+body.page-library .wrapper section.articles-flow .article .image img {
+  display: block;
+  width: 100%;
+}
+/* line 91, page_library.less */
+body.page-library .wrapper section.articles-flow .article .content {
+  width: 100%;
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  padding: 20px 30px;
+}
+/* line 96, page_library.less */
+body.page-library .wrapper section.articles-flow .article .content h4.article-name {
+  font-size: 1.4rem;
+  font-weight: 500;
+  padding-top: 0;
+}
+/* line 102, page_library.less */
+body.page-library .wrapper section.articles-flow .article .content p {
+  font-size: 1.1rem;
+  margin: 5px 0;
+}
+/* line 105, page_library.less */
+body.page-library .wrapper section.articles-flow .article .content p.category {
+  color: #35504e;
+  margin-top: 0;
+  font-weight: 500;
+}
+/* line 109, page_library.less */
+body.page-library .wrapper section.articles-flow .article .content p.category span.value {
+  color: #8aa4a2;
+}
+/* line 113, page_library.less */
+body.page-library .wrapper section.articles-flow .article .content p.author {
+  font-size: 1.2rem;
+  color: #4ad0c5;
+}
+/* line 117, page_library.less */
+body.page-library .wrapper section.articles-flow .article .content p.introtext {
+  line-height: 155%;
+}
+/* line 120, page_library.less */
+body.page-library .wrapper section.articles-flow .article .content p.date {
+  margin-top: 10px;
+  color: #b9d4cc;
+  font-size: 1.0rem;
+}
+/* line 126, page_library.less */
+body.page-library .wrapper section.articles-flow .article .content a.btn {
+  display: block;
+  text-align: center;
+  font-size: 1.2.rem;
+  margin-top: 15px;
+}
 /*# sourceMappingURL=styles.css.map */
