--- a/consult/less/styles.less
+++ b/consult/less/styles.less
@@ -14,3 +14,5 @@
 @import url('page_public_question_list.less');
 @import url('page_reviews.less');
 @import url('page_consultation.less');
+@import url('modal_sign_up_consultation.less');
+@import url('page_library.less');
